<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">产品简介</string>

    <string name="action_settings">Settings</string>
     <string name="phoneNum">手机号码</string>
    <string name="password">请输入密码登录：</string>
    <string name="get_imei">查看本机信息</string>
    <string name="loginTitle">登录</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="message">提示</string>
    <string name="app_eid">电子证件信息管理</string>
    <string name="app_eid_picshow">电子证件信息采集</string>
    <string name="app_eid_manager">待上传信息管理</string>
    <string name="is_msisdn">号码不能为空，请补充！</string>
    <string name="is_ida">证件正面照不能为空，请补充！</string>
    <string name="is_idb">证件背面照不能为空，请补充！</string>
    <string name="is_selected">请先选择至少一条记录</string>
    <string name="serviceUrl">http://127.0.0.1:9080/xxx</string>
    <string name="select_operator_id">请选择工号</string>
    <string name="select_workbench">选择工作台</string>
    <string name="member_service">成员服务</string>
    <string name="group_service">我服务的集团</string>
    <string name="input_usernum">请输入用户号码</string>
    <string name="device_list">可用设备列表</string>
    <string name="select_device">请选择要连接的蓝牙设备</string>
    <string name="select_device_print">请选择打印设备,进行打印</string>
    <string name="select_device_read_sim">请选择读卡器,进行操作</string>
    <string name="scanning">搜索蓝牙设备...</string>
    <string name="none_found">无可用设备！</string>
    <string name="print_setting">打印设置</string>
    <string name="print_setting_func_title">选择功能</string>
    <string name="input_groupname">输入集团名称搜索更多集团</string>
    <string name="input_groupid">输入集团编号</string>
    <string name="select_IDC_reader">选择读卡器</string>
    <string name="IDC_read_step1">一：将身份证置于读卡器上</string>
    <string name="IDC_read_step2">二：轻敲右边的按钮以搜索读卡器设备</string>
    <string name="IDC_read_step3">三：轻敲设备列表中已匹配的设备</string>
    <string name="IDC_read_step4">四：确认读取结果</string>
    <string name="BTP_read_step1">一：轻敲右边的按钮以搜索打印设备</string>
    <string name="BTP_read_step2">二：轻敲设备列表中已匹配的设备</string>
    <string name="BTP_read_step3">三：确认打印结果</string>
    <string name="select_other_device">返回</string>
    <string name="IDC_info">身份证信息</string>
    <string name="ele_sign_preview">预览</string>
    <string name="ele_sign">签名</string>
    <string name="frontalPhoto">正面照</string>
    <string name="oppositePhoto">反面照</string>
    <string name="clear">清除</string>
    <string name="recommend_sale">主动营销推荐</string>
    <string name="recommend_list">推荐营销方案列表</string>
    <string name="default_workbench_setting">默认工作台设置</string>
    <string name="loadingGroupList">正在加载集团列表</string>
    <string name="exception_test">异常测试</string>
    <string name="sim_test">SIM卡测试</string>
    <string name="fastmode_title">启用极速版</string>
    <string name="fastmode_message">根据你的手机配置，建议启用极速版。极速版适用于中低端手机。</string>
    <string name="set_default">设为默认</string>
    <string name="person_set">个性化设置</string>
    <string name="mode_set">模式设置</string>
    <string name="fast_mode">极速版</string>
    <string name="normal_mode">标准版</string>
    <string name="fast_info">优先保证系统性能，适用于CPU主频低于1GHz的终端</string>
    <string name="normal_info">在保证系统性能基础上，提供更优的界面效果，适用于CPU主频高于1GHz的终端。</string>
    <string name="update_repair">缓存更新修复</string>
    <string name="cache_repair">缓存修复</string>
    <string name="not_support_file_type">不支持的文件类型</string>
    <string name="select_opt">选择操作</string>
    <string name="please_select">请选择</string>
    <string name="not_open_file_software">系统检测到您尚未安装对应的文件类型查看器，建议立即安装！</string>
    <string name="save">保存</string>
    <string name="open">打开</string>
    <string name="installNow">立即安装</string>
    <string name="savefile">保存文件</string>
    <string name="sdcard_nouse">SDCad不可用</string>
    <string name="file_aleady_exit">文件已存在</string>
    <string name="file_name_cannot_blank">文件名不能为空,保存失败!</string>
    <string name="file_prename_cannot_blank">文件前缀名不能为空,保存失败!</string>
    <string name="is_override_file">是否覆盖?</string>
    <string name="downloading">正在下载，请稍后..</string>
    <string name="sel_save_path">选择保存路径</string>
    <string name="ret_parent">返回上一级...</string>
    <string name="now_path">当前路径:</string>
    <string name="file_name">名称</string>
    <string name="file_path">路径</string>
    <string name="browser">浏览</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_msg">请将二维码或条码置于下面框内，软件会自动识别</string>
    <string name="login">登 录</string>
    <string name="search">查询</string>
    <string name="cancle">取消</string>
    <string name="welcome_logo_text">中国移动CRM系统</string>
    <string name="welcome_loading">Loading...</string>
    <string name="welcome_infomation">中国移动通信集团版权所有</string>
    <string name="login_oper_hint">请输入操作员工号</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_psw_hint">请输入操作员密码</string>
    <string name="login_captcha_hint">请输入验证码</string>
    <string name="search_func_hint">请输入菜单名称</string>
    <string name="now_sign_in">正在办理:</string>
    <string name="now_search">正在查询:</string>
    <string name="go_back">" 返回"</string>
    <string name="recommend">推荐</string>
    <string name="get">获取</string>
    <string name="veryfycode_tip">看不清？点击刷新！</string>
    <string name="login_un_hint">请输入用户名</string>
    <string name="idcard_name">"姓 名  "</string>
    <string name="idcard_gender">"性 别  "</string>
    <string name="idcard_nation">"民 族  "</string>
    <string name="idcard_birthday">"出 生  "</string>
    <string name="idcard_address">"住 址  "</string>
    <string name="idcard_idno">"公民身份号码  "</string>
    <string name="idcard_signoffice">"签发机关  "</string>
    <string name="idcard_expirydate">"有效期限  "</string>
    <string name="idcard_title">居民身份证</string>
    <string name="city_name">选择地市</string>
    <string name="random_sms">请输入短信码</string>
    <string name="cities_list">请选择城市</string>
    <string name="setting">设置</string>
    <string name="print_preview">打印预览</string>
    <string name="oper_center_tip1">登录账号信息</string>
    <string name="no_download">抱歉，当前没有正在下载的任务！</string>
    <string name="photo">拍照</string>
    <string name="idcard_info_read">拍照识别</string>
    <string name="idcard_info_name">姓名：</string>
    <string name="idcard_info_id">证件号码：</string>
    <string name="idcard_info_sex">性别：</string>
    <string name="idcard_info_date">出生日期：</string>
    <string name="idcard_info_type">民族：</string>
    <string name="idcard_info_address">住址：</string>
    <string name="idcard_info_create">签发机关：</string>
    <string name="idcard_info_starDate">生效时间：</string>
    <string name="idcard_info_endDate">失效时间：</string>
    <string name="idcard_msg">请将身份证置于框内拍照！</string>
    <string name="tip_read_all">提示：身份证正反两面都要拍照！</string>
    <string name="print_notice_step1">一：打印时请勿移动机器！</string>
    <string name="print_notice_step2">二：确认打印纸是否足够！</string>
    <string name="print_notice_step3">三：确认出纸口通畅！</string>
    <string name="all_download">下载</string>
    <string name="input_bizdisname">输入要查询的产品名称</string>
    <string name="check_network">网络检测</string>
    <string name="network_type">网络类型：</string>
    <string name="network_name">网络名称：</string>
    <string name="network_speed">当前网速：</string>
    <string name="network_reson">可能原因：</string>
    <string name="network_time">总共用时：</string>
    <string name="IDC_read_one_step1">一：将身份证置于感应区</string>
    <string name="SIM_read_one_step1">一：将SIM卡置于感应区</string>
    <string name="BANK_read_one_step1">一：将银行卡卡置于感应区</string>
    <string name="sim_key">请选择密钥</string>

</resources>
